--- a/Alicargo/Web.config
+++ b/Alicargo/Web.config
@@ -27,7 +27,7 @@
 	<system.net>
 		<mailSettings>
 			<smtp deliveryMethod="SpecifiedPickupDirectory" from="noreply@alicargo.ru">
-				<specifiedPickupDirectory pickupDirectoryLocation="D:\S\Projects\Alicargo\Alicargo\Mails" />
+				<specifiedPickupDirectory pickupDirectoryLocation="A:\Projects\Alicargo\Alicargo\Mails" />
 			</smtp>
 		</mailSettings>
 	</system.net>
