update backup scripts

--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -639,17 +639,18 @@
     <Content Include="Content\themes\jMetro\images\ui-icons_d4d4d4_0.png" />
     <Content Include="Content\themes\jMetro\images\ui-icons_ffffff_0.png" />
     <Content Include="Content\themes\jMetro\jquery-ui.css" />
-    <Content Include="Deploy\app_offline.htm" />
-    <Content Include="Deploy\Install\Sql\create-files-db.sql" />
-    <Content Include="Deploy\Install\Sql\create-sp-for-backup-db.sql" />
-    <Content Include="Deploy\Install\Sql\db_1_1.sql" />
-    <Content Include="Deploy\Install\Sql\set-initial-data.sql" />
-    <Content Include="Deploy\Install\Sql\create-sp-restore-db.sql" />
-    <None Include="Deploy\Install\restore-db.ps1" />
+    <Content Include="Deploy\Install\app_offline.htm" />
+    <Content Include="Deploy\backup-db-alicargo_2_0.ps1" />
+    <Content Include="Deploy\backup-files-db-alicargo_2_0.ps1" />
+    <Content Include="Deploy\Install\Sql\Alicargo\create-files-db.sql" />
+    <Content Include="Deploy\Install\Sql\Master\create-sp-for-backup-db.sql" />
+    <Content Include="Deploy\Install\Sql\Master\create-sp-restore-db.sql" />
+    <Content Include="Deploy\Install\Sql\Alicargo\create-db_1_1.sql" />
+    <Content Include="Deploy\Install\Sql\init-db.ps1" />
+    <Content Include="Deploy\Install\Sql\Alicargo\set-initial-data.sql" />
     <Content Include="Deploy\testing.txt" />
-    <Content Include="Deploy\Update\1_1_To_2_0.sql" />
-    <Content Include="Deploy\Update\Plan.txt" />
-    <Content Include="Deploy\Update\restore-db.sql" />
+    <Content Include="Deploy\Install\Sql\Alicargo\1_1_To_2_0.sql" />
+    <Content Include="Deploy\Plan.txt" />
     <Content Include="Scripts\app\AirWaybill\Columns.js" />
     <Content Include="Scripts\app\AirWaybill\Grid.js" />
     <Content Include="Scripts\app\Alicargo.js" />
@@ -674,10 +675,7 @@
     <Content Include="Global.asax" />
     <Content Include="App_Code\Helpers.cshtml" />
     <Content Include="Deploy\Install\backup-db.ps1" />
-    <Content Include="Deploy\Install\Sql\init-db.ps1" />
-    <Content Include="Deploy\backup-db-alicargo_1_1.ps1" />
     <Content Include="Deploy\deploy.ps1" />
-    <Content Include="Deploy\Update\update.ps1" />
     <Content Include="Deploy\dev.bat" />
     <None Include="Properties\PublishProfiles\Dev.pubxml" />
     <None Include="Properties\PublishProfiles\Release.pubxml" />
