added filter for Cargo Received state

--- a/Alicargo/Web.config
+++ b/Alicargo/Web.config
@@ -16,12 +16,13 @@
 		<add key="StateId-CargoAtCustoms" value="8" />
 		<add key="StateId-CargoIsCustomsCleared" value="9" />
 		<add key="StateId-CargoReceived" value="11" />
+		<add key="CargoReceivedDaysToShow" value="10"/>
 		<add key="StateId-CargoOnTransit" value="12" />
 		<add key="DefaultFrom" value="robot@alicargo.ru" />
 		<add key="JobPausePeriod" value="00:00:05" />
 	</appSettings>
 	<connectionStrings>
-		<add connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" name="MainConnectionString" providerName="System.Data.SqlClient" />
+		<add connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_2_0;Integrated Security=True" name="MainConnectionString" providerName="System.Data.SqlClient" />
 		<add connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo.Files;Integrated Security=True" name="FilesDbConnectionString" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<system.net>
