added test for filter for Cargo Received state

--- a/Alicargo.BlackBox.Tests/Alicargo.BlackBox.Tests.csproj
+++ b/Alicargo.BlackBox.Tests/Alicargo.BlackBox.Tests.csproj
@@ -139,6 +139,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Services\Application\ApplicationListPresenterTests.cs" />
     <Compile Include="StateServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
