--- a/Alicargo.BlackBox.Tests/app.config
+++ b/Alicargo.BlackBox.Tests/app.config
@@ -1,63 +1,64 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="Alicargo.BlackBox.Tests.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-    </sectionGroup>
-  </configSections>
-  <appSettings>
-    <add key="StateId-Default" value="1" />
-    <add key="StateId-CargoInStock" value="6" />
-    <add key="StateId-CargoIsFlew" value="7" />
-    <add key="StateId-CargoAtCustoms" value="8" />
-    <add key="StateId-CargoIsCustomsCleared" value="9" />
-    <add key="StateId-CargoReceived" value="11" />
-    <add key="StateId-CargoOnTransit" value="12" />
-  </appSettings>
-  <connectionStrings>
-    <add name="Alicargo.BlackBox.Tests.Properties.Settings.MainConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" />
-  </connectionStrings>
-  <userSettings>
-    <Alicargo.BlackBox.Tests.Properties.Settings>
-      <setting name="BaseAddress" serializeAs="String">
-        <value>http://localhost:1893/</value>
-      </setting>
-      <setting name="AdminLogin" serializeAs="String">
-        <value>Admin</value>
-      </setting>
-      <setting name="AdminPassword" serializeAs="String">
-        <value>Admin</value>
-      </setting>
-      <setting name="ClientLogin" serializeAs="String">
-        <value>c1</value>
-      </setting>
-      <setting name="ClientPassword" serializeAs="String">
-        <value>c1</value>
-      </setting>
-    </Alicargo.BlackBox.Tests.Properties.Settings>
-  </userSettings>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+	<configSections>
+		<sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+			<section name="Alicargo.BlackBox.Tests.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+		</sectionGroup>
+	</configSections>
+	<appSettings>
+		<add key="StateId-Default" value="1" />
+		<add key="StateId-CargoInStock" value="6" />
+		<add key="StateId-CargoIsFlew" value="7" />
+		<add key="StateId-CargoAtCustoms" value="8" />
+		<add key="StateId-CargoIsCustomsCleared" value="9" />
+		<add key="StateId-CargoReceived" value="11" />
+		<add key="CargoReceivedDaysToShow" value="10"/>
+		<add key="StateId-CargoOnTransit" value="12" />
+	</appSettings>
+	<connectionStrings>
+		<add name="Alicargo.BlackBox.Tests.Properties.Settings.MainConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" />
+	</connectionStrings>
+	<userSettings>
+		<Alicargo.BlackBox.Tests.Properties.Settings>
+			<setting name="BaseAddress" serializeAs="String">
+				<value>http://localhost:1893/</value>
+			</setting>
+			<setting name="AdminLogin" serializeAs="String">
+				<value>Admin</value>
+			</setting>
+			<setting name="AdminPassword" serializeAs="String">
+				<value>Admin</value>
+			</setting>
+			<setting name="ClientLogin" serializeAs="String">
+				<value>c1</value>
+			</setting>
+			<setting name="ClientPassword" serializeAs="String">
+				<value>c1</value>
+			</setting>
+		</Alicargo.BlackBox.Tests.Properties.Settings>
+	</userSettings>
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
 				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="4.0.0.0" />
 			</dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Moq" publicKeyToken="69f491c39445e920" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.1.1309.1617" newVersion="4.1.1309.1617" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Ploeh.AutoFixture" publicKeyToken="b24654c590009d4f" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.12.1.0" newVersion="3.12.1.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
+			<dependentAssembly>
+				<assemblyIdentity name="Moq" publicKeyToken="69f491c39445e920" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.1.1309.1617" newVersion="4.1.1309.1617" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Ploeh.AutoFixture" publicKeyToken="b24654c590009d4f" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-3.12.1.0" newVersion="3.12.1.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
 </configuration>
