--- a/packages/T4MVC.3.7.4/T4MVC.3.7.4.nuspec
+++ b/packages/T4MVC.3.7.4/T4MVC.3.7.4.nuspec
@@ -3,6 +3,7 @@
   <metadata>
     <id>T4MVC</id>
     <version>3.7.4</version>
+    <title>T4MVC</title>
     <authors>David Ebbo</authors>
     <owners>David Ebbo</owners>
     <licenseUrl>http://mvccontrib.codeplex.com/license</licenseUrl>
@@ -10,6 +11,8 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>T4MVC is a T4 template that generates strongly typed helpers for ASP.NET MVC.</description>
     <summary>T4MVC is a T4 template that generates strongly typed helpers for ASP.NET MVC.</summary>
+    <releaseNotes />
+    <copyright />
     <language>en-US</language>
     <tags>t4 mvc t4mvc</tags>
     <dependencies>
