--- a/Alicargo/packages.config
+++ b/Alicargo/packages.config
@@ -4,6 +4,7 @@
   <package id="AspNetMvc" version="4.0.20710.0" targetFramework="net45" />
   <package id="EPPlus" version="3.1.3.3" targetFramework="net45" />
   <package id="jQuery" version="2.0.3" targetFramework="net45" />
+  <package id="jQuery.Cookie" version="1.3.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.10.3" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="jquery-globalize" version="0.1.3" targetFramework="net45" />
