--- a/Alicargo.DataAccess/Alicargo.DataAccess.csproj
+++ b/Alicargo.DataAccess/Alicargo.DataAccess.csproj
@@ -76,6 +76,7 @@
     <Compile Include="DbContext\SqlProcedureExecutor.cs" />
     <Compile Include="Helpers\TableParameter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ApplicationEventRepository.cs" />
     <Compile Include="Repositories\ApplicationRepository.cs" />
     <Compile Include="Repositories\ApplicationUpdateRepository.cs" />
     <Compile Include="Repositories\BrokerRepository.cs" />
