--- a/Alicargo/Web.config
+++ b/Alicargo/Web.config
@@ -22,7 +22,7 @@
 		<add key="JobPausePeriod" value="00:00:05" />
 	</appSettings>
 	<connectionStrings>
-		<add connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_2_0;Integrated Security=True" name="MainConnectionString" providerName="System.Data.SqlClient" />
+		<add connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" name="MainConnectionString" providerName="System.Data.SqlClient" />
 		<add connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo.Files;Integrated Security=True" name="FilesDbConnectionString" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<system.net>
@@ -76,7 +76,7 @@
 			</layout>
 		</appender>
 		<logger additivity="false" name="Logger">
-			<level value="ALL" />
+			<level value="ERROR" />
 			<appender-ref ref="Logger" />
 		</logger>
 		<appender name="JobsLogger" type="log4net.Appender.RollingFileAppender">
@@ -92,7 +92,7 @@
 			</layout>
 		</appender>
 		<logger additivity="false" name="JobsLogger">
-			<level value="ALL" />
+			<level value="ERROR" />
 			<appender-ref ref="JobsLogger" />
 		</logger>
 	</log4net>
