--- a/Alicargo.Jobs/Alicargo.Jobs.csproj
+++ b/Alicargo.Jobs/Alicargo.Jobs.csproj
@@ -52,6 +52,7 @@
     <Compile Include="IJob.cs" />
     <Compile Include="Calculation\CalculationMailerJob.cs" />
     <Compile Include="IJobRunner.cs" />
+    <Compile Include="JobRunnerHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.Designer.cs">
       <AutoGen>True</AutoGen>
