--- a/Alicargo.TestHelpers/Alicargo.TestHelpers.csproj
+++ b/Alicargo.TestHelpers/Alicargo.TestHelpers.csproj
@@ -77,6 +77,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ColsoleLogger.cs" />
     <Compile Include="CompositionHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MockContainer.cs" />
