--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\Alicargo.BlackBox.Tests\packages.config" />
   <repository path="..\Alicargo.Core.Tests\packages.config" />
+  <repository path="..\Alicargo.Core\packages.config" />
   <repository path="..\Alicargo.DataAccess.BlackBox.Tests\packages.config" />
   <repository path="..\Alicargo.DataAccess\packages.config" />
   <repository path="..\Alicargo.Jobs.Tests\packages.config" />
