implemented EmailMessageRepository and Tests

--- a/Alicargo.DataAccess.BlackBox.Tests/Alicargo.DataAccess.BlackBox.Tests.csproj
+++ b/Alicargo.DataAccess.BlackBox.Tests/Alicargo.DataAccess.BlackBox.Tests.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Helpers\ApplicationHelperTests.cs" />
     <Compile Include="Helpers\ApplicationRepositoryOrdererTests.cs" />
     <Compile Include="Helpers\DbTestContext.cs" />
+    <Compile Include="Repositories\EmailMessageRepositoryTests.cs" />
     <Compile Include="Repositories\SenderRepositoryTests.cs" />
     <Compile Include="Repositories\Tests.StateRepository.cs" />
     <Compile Include="Repositories\AwbRepositoryTests.cs" />
