--- a/Alicargo.Jobs/Alicargo.Jobs.csproj
+++ b/Alicargo.Jobs/Alicargo.Jobs.csproj
@@ -58,7 +58,9 @@
     <Compile Include="Core\IJobRunner.cs" />
     <Compile Include="Core\JobRunnerHelper.cs" />
     <Compile Include="Core\ShardSettings.cs" />
+    <Compile Include="Entities\ApplicationSetStateEventData.cs" />
     <Compile Include="Entities\ApplicationCreatedEventData.cs" />
+    <Compile Include="Entities\ApplicationFileUploadedEventData.cs" />
     <Compile Include="MailSenderJob.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.Designer.cs">
