--- a/Alicargo.Core/Alicargo.Core.csproj
+++ b/Alicargo.Core/Alicargo.Core.csproj
@@ -77,6 +77,7 @@
     </Compile>
     <Compile Include="Services\Abstract\ILocalizationService.cs" />
     <Compile Include="Services\Abstract\IStateConfig.cs" />
+    <Compile Include="Services\Email\DbMailSender.cs" />
     <Compile Include="Services\ExtensionsHelper.cs" />
     <Compile Include="Resources\Entities.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -115,9 +116,11 @@
     <Compile Include="Services\Abstract\IMailSender.cs" />
     <Compile Include="Services\Abstract\IRecipients.cs" />
     <Compile Include="Services\LocalizationService.cs" />
+    <Compile Include="Services\Email\MailSender.cs" />
     <Compile Include="Services\PasswordConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Serializer.cs" />
+    <Compile Include="Services\Email\SilentMailSender.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\Enums.en.resx">
