--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -151,6 +151,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Services\Application\ApplicationManagerWithEvent.cs" />
+    <Compile Include="Services\Excel\ExcelSenderCalculation.cs" />
+    <Compile Include="Services\Excel\ExcelAdminCalculation.cs" />
     <Compile Include="T4MVC\AirWaybillController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
