prepare to deploy

--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -632,18 +632,13 @@
     <Content Include="Content\themes\jMetro\images\ui-icons_d4d4d4_0.png" />
     <Content Include="Content\themes\jMetro\images\ui-icons_ffffff_0.png" />
     <Content Include="Content\themes\jMetro\jquery-ui.css" />
-    <Content Include="Deploy\Install\app_offline.htm" />
-    <Content Include="Deploy\backup-db-alicargo_2_0.ps1" />
-    <Content Include="Deploy\backup-files-db-alicargo_2_0.ps1" />
-    <Content Include="Deploy\Install\Sql\Alicargo\create-files-db.sql" />
-    <Content Include="Deploy\Install\Sql\Master\create-sp-for-backup-db.sql" />
-    <Content Include="Deploy\Install\Sql\Master\create-sp-restore-db.sql" />
-    <Content Include="Deploy\Install\Sql\Alicargo\create-db_1_1.sql" />
-    <Content Include="Deploy\Install\Sql\init-db.ps1" />
-    <Content Include="Deploy\Install\Sql\Alicargo\set-initial-data.sql" />
-    <Content Include="Deploy\testing.txt" />
-    <Content Include="Deploy\Install\Sql\Alicargo\1_1_To_2_0.sql" />
+    <Content Include="Deploy\app_offline.htm" />
+    <Content Include="Deploy\Scripts\Setup\create-sp-for-backup-db.sql" />
+    <Content Include="Deploy\Scripts\Setup\create-sp-restore-db.sql" />
+    <Content Include="Deploy\Scripts\Setup\init-db.ps1" />
+    <Content Include="Deploy\Scripts\Setup\set-initial-data.sql" />
     <Content Include="Deploy\Plan.txt" />
+    <Content Include="Deploy\Scripts\update.sql" />
     <Content Include="Scripts\app\AirWaybill\Columns.js" />
     <Content Include="Scripts\app\AirWaybill\Grid.js" />
     <Content Include="Scripts\app\Alicargo.js" />
@@ -667,9 +662,10 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="App_Code\Helpers.cshtml" />
-    <Content Include="Deploy\Install\backup-db.ps1" />
-    <Content Include="Deploy\deploy.ps1" />
-    <Content Include="Deploy\dev.bat" />
+    <Content Include="Deploy\Scripts\backup-db.ps1" />
+    <Content Include="Deploy\pre-deploy.ps1" />
+    <Content Include="Deploy\server-update.ps1" />
+    <Content Include="Deploy\server-release.ps1" />
     <None Include="Properties\PublishProfiles\Dev.pubxml" />
     <None Include="Properties\PublishProfiles\Release.pubxml" />
     <None Include="Scripts\jquery-2.0.3.intellisense.js" />
