--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -633,6 +633,7 @@
     <Content Include="Content\themes\jMetro\images\ui-icons_ffffff_0.png" />
     <Content Include="Content\themes\jMetro\jquery-ui.css" />
     <Content Include="Deploy\app_offline.htm" />
+    <Content Include="Deploy\restore-previous-release.sql" />
     <Content Include="Deploy\Scripts\Setup\create-sp-for-backup-db.sql" />
     <Content Include="Deploy\Scripts\Setup\create-sp-restore-db.sql" />
     <Content Include="Deploy\Scripts\Setup\init-db.ps1" />
