--- a/Alicargo.DataAccess/Alicargo.DataAccess.csproj
+++ b/Alicargo.DataAccess/Alicargo.DataAccess.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Helpers\TableParameter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ApplicationEventRepository.cs" />
+    <Compile Include="Repositories\ApplicationFileRepository.cs" />
     <Compile Include="Repositories\ApplicationRepository.cs" />
     <Compile Include="Repositories\ApplicationUpdateRepository.cs" />
     <Compile Include="Repositories\BrokerRepository.cs" />
