--- a/Alicargo.BlackBox.Tests/app.config
+++ b/Alicargo.BlackBox.Tests/app.config
@@ -14,6 +14,8 @@
 		<add key="StateId-CargoReceived" value="11" />
 		<add key="CargoReceivedDaysToShow" value="10" />
 		<add key="StateId-CargoOnTransit" value="12" />
+
+		<add key="DefaultFrom" value="robot@alicargo.ru" />
 	</appSettings>
 	<connectionStrings>
 		<add name="Alicargo.BlackBox.Tests.Properties.Settings.MainConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" />
