--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -638,13 +638,13 @@
     <Content Include="Content\themes\jMetro\images\ui-icons_ffffff_0.png" />
     <Content Include="Content\themes\jMetro\jquery-ui.css" />
     <Content Include="Deploy\app_offline.htm" />
+    <Content Include="Deploy\check-list.txt" />
     <Content Include="Deploy\restore-previous-release.sql" />
     <Content Include="Deploy\Scripts\setup-rights.sql" />
     <Content Include="Deploy\Scripts\Setup\create-sp-for-backup-db.sql" />
     <Content Include="Deploy\Scripts\Setup\create-sp-restore-db.sql" />
     <Content Include="Deploy\Scripts\Setup\init-db.ps1" />
     <Content Include="Deploy\Scripts\Setup\set-initial-data.sql" />
-    <Content Include="Deploy\Plan.txt" />
     <Content Include="Deploy\Scripts\update.sql" />
     <Content Include="Scripts\app\AirWaybill\Columns.js" />
     <Content Include="Scripts\app\AirWaybill\Grid.js" />
