--- a/Alicargo/Web.config
+++ b/Alicargo/Web.config
@@ -23,7 +23,7 @@
 	</appSettings>
 	<connectionStrings>
 		<add connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" name="MainConnectionString" providerName="System.Data.SqlClient" />
-		<add connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo.Files;Integrated Security=True" name="FilesDbConnectionString" providerName="System.Data.SqlClient" />
+		<add connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files;Integrated Security=True" name="FilesDbConnectionString" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<system.net>
 		<mailSettings>
