--- a/Alicargo.DataAccess/Alicargo.DataAccess.csproj
+++ b/Alicargo.DataAccess/Alicargo.DataAccess.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Repositories\AwbRepository.cs" />
     <Compile Include="Repositories\ClientFileRepository.cs" />
     <Compile Include="Repositories\EmailMessageRepository.cs" />
+    <Compile Include="Repositories\EmailTemplateRepository.cs" />
     <Compile Include="Repositories\SenderRepository.cs" />
     <Compile Include="Repositories\StateRepository.cs" />
     <Compile Include="Repositories\StateSettingsRepository.cs" />
